# metadata_converter

./: .gitignore  Makefile  README.rst  environment.sh  setup.cfg
docs/: index.md
docs/emp/: BarcodeSequence.md  Description.md  LinkerPrimerSequence.md  Sample.md  SampleID.md  Study.md  adiv_chao1.md  adiv_faith_pd.md  adiv_observed_otus.md  adiv_shannon.md  alias.md  altitude_m.md  ammonium_umol_per_l.md  coauthors.md  collection_timestamp.md  comment_from_gail.md  country.md  dense_sampling.md  depth_m.md  doi.md  ebi_accession.md  elevation_m.md  email.md  emp_release1.md  empo_0.md  empo_1.md  empo_2.md  empo_3.md  env_biome.md  env_feature.md  env_material.md  envo_biome_0.md  envo_biome_1.md  envo_biome_2.md  envo_biome_3.md  envo_biome_4.md  envo_biome_5.md  extraction_center.md  host_class.md  host_common_name.md  (+57 more)
docs/kbase/: ENIGMA.md  SESAR.md  age_unit.md  aquifer.md  area_name.md  average_water_level_ft_amsl.md  biomass_carbon_mg_g.md  biome.md  boring_diameter_in.md  boring_ft_bgs.md  boring_refusal.md  city_township.md  classification.md  collection_date_precision.md  collection_method.md  collection_method_description.md  collection_time.md  collection_time_end.md  collector_chief_scientist.md  collector_chief_scientist_address.md  condition.md  conductivity_ms_cm.md  continent.md  country.md  county.md  current_archive.md  dapi_cell_count_cells_g.md  date.md  depth.md  depth_scale.md  description.md  dna_picogreen_total_ng.md  drive_casing_end_depth_ft_bgs.md  drive_casing_id_in.md  drive_casing_od_in.md  drive_casing_start_depth_ft_bgs.md  drive_casing_type.md  elevation.md  env_package.md  env_pakcage.md  (+93 more)
docs/mixs/: Activity.md  Agent.md  AttributeValue.md  BooleanValue.md  ControlledTermValue.md  EnvironmentalMaterialTerm.md  GeolocationValue.md  IntegerValue.md  NamedThing.md  OntologyClass.md  PersonValue.md  QuantityValue.md  TextValue.md  TimestampValue.md  UrlValue.md  acted_on_behalf_of.md  activity_id.md  alternate_identifiers.md  description.md  ended_at_time.md  geolocation_value_has_raw_value.md  has_boolean_value.md  has_numeric_value.md  has_raw_value.md  id.md  index.md  language.md  latitude.md  longitude.md  name.md  orcid.md  started_at_time.md  (+9 more)
mappings/: README.md  matches-summary.tsv  matches.tsv  nomatches-biosample-gold-mixs.tsv  nomatches-gold-mixs.tsv  nomatches-kbase-mixs.tsv  prefixes.ttl  weights.pro
metadata_converter/: __init__.py  ddl_tsv.py  kbase.py  mixs6.py  neon.py
ontotools-docker-config-master/: README.md  clean.sh  redeploy.sh  redeploy_hh.sh
tests/: test_darwincore.py  test_gold.py  test_kbase.py  test_mixs6.py  test_neon.py
util/: goldmap2sssom.pl  sql2tsv.pl
(+5471 files in other folders)
